manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-status-app
  namespace: cluster-status
  labels:
    app: cluster-status-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-status-app
  template:
    metadata:
      labels:
        app: cluster-status-app
    spec:
      containers:
      - name: cluster-status-app
        imagePullPolicy: Always
        image: ghcr.io/vizzletf/cluster-status-app:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: kubeconfig
          mountPath: /root/.kube
          readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: kubeconfig
        secret:
          secretName: kubeconfig
          items:
          - key: config
            path: config
